--- a/requirements.txt
+++ b/requirements.txt
@@ -48,6 +48,7 @@ pillow==12.0.0
 plotly==6.3.1
 protobuf==6.33.0
 psutil==7.1.1
+psycopg2==2.9.11
 pvlib==0.13.1
 pydantic==2.12.3
 pydantic-settings==2.11.0
@@ -63,6 +64,7 @@ requests==2.32.5
 rich==14.2.0
 scikit-learn==1.7.2
 scipy==1.15.3
+setuptools==80.9.0
 six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.44
